averia 1 resuelta..